--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "bun run --watch src/server.ts",
     "build": "bun build src/server.ts --outdir ./dist --target bun",
     "start": "bun run dist/server.js",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "vercel-deploy": "bunx vercel"
   },
   "dependencies": {
     "hono": "^4.6.14",
